--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,16 @@ body {
     color: var(--headline-color);
     font-family: Roboto, sans-serif;
 }
+h1,h2,h3,h4,h5,h6,p {
+    margin: 0;
+} 
+ul,ol{
+    padding-left: 0;
+    margin: 0;
+}
+img{
+    display: block;
+}
 .link {
     text-decoration: none;
 }
@@ -28,16 +38,6 @@ body {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
-}
-h1,h2,h3,h4,h5,h6,p {
-    margin: 0;
-} 
-ul,ol{
-    padding-left: 0;
-    margin: 0;
-}
-img{
-    display: block;
 }
 .container{
     width: 1200px;
@@ -107,11 +107,24 @@ color: var(--accent-color);
     padding-bottom: 25px;
 }
 .header-link {
-font-weight: 500;
-font-size: 14px;
-line-height: 1.33;
-letter-spacing: 0.02em;
-color: var(--headline-color);}
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.33;
+    letter-spacing: 0.02em;
+    color: var(--headline-color);
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link.link.current::after{
+    position: absolute;
+    content:"";
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -32px;
+    background-color:var(--accent-color);
+    border-radius: 2px;
+    }
 .header-link:hover,
 .header-link:focus
 {
@@ -121,14 +134,15 @@ color: var(--headline-color);}
     color: var(--accent-color);
 }
 .header-item-contact-link{
-font-weight: 500;
-font-size: 14px;
-line-height: 1.33;
-letter-spacing: 0.02em;
-color: var(--title-color);
-fill: var(--title-color);
-display: flex;
-align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.33;
+    letter-spacing: 0.02em;
+    color: var(--title-color);
+    fill: var(--title-color);
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-item-contact-link:hover,
 .header-item-contact-link:focus{
@@ -139,8 +153,8 @@ align-items: center;
 /* ----Герой---- */
 
 .hero{
-padding: 200px 0;
-background-color: var(--background-color);
+    padding: 200px 0;
+    background-color: var(--background-color);
     max-width: 1600px;
     height: 600px;
     margin-left: auto;
@@ -148,39 +162,40 @@ background-color: var(--background-color);
     background-image: url(../images/img-оverlay.png),
     url(../images/img-hero.jpg);
     background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .hero-title{
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-letter-spacing: 0.06em;
-text-align: center;
-text-transform: uppercase;
-color: var(--header-color);
-max-width:696px;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--header-color);
+    max-width:696px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
 }
 .hero-btn{
-background-color: var(--accent-color);
-font-family: inherit;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-display: flex;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--header-color);
-cursor: pointer;
-min-width: 136px;
-margin-left: auto;
-margin-right: auto;
-padding: 10px 32px;
-border-radius: 4px;
-border: 1px solid transparent;
+    background-color: var(--accent-color);
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--header-color);
+    cursor: pointer;
+    min-width: 136px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 32px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -254,11 +269,33 @@ color: var(--headline-color);
 .dopsection {
     padding-top: 0px;
 }
+
 .task-item +.task-item{
     margin-left: 30px;
 }
 .task-item:last-child{
     margin-right: 0px;
+}
+.task-box-headline{
+    display: flex;
+    position: relative;
+}
+.task-item-headline{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 70px;
+    left: 0;
+    bottom: 0;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--header-color);
+    background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* ----Секция Наша команда---- */
@@ -311,6 +348,8 @@ margin-bottom: 16px;
     background-color: #ffffff;
     border-radius: 50%;
     fill: #AFB1B8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .icon-team-link:hover,
 .icon-team-link:focus{
@@ -342,6 +381,7 @@ margin-bottom: 16px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     fill: #AFB1B8;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus{
@@ -368,6 +408,7 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--header-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contact-item-link{
 font-style: normal;
@@ -375,6 +416,7 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-address-item-link:hover,
 .footer-address-item-link:focus {
@@ -414,6 +456,7 @@ color: #FFFFFF;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     fill: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-footer-link:hover,
 .icon-footer-link:focus{
@@ -453,6 +496,7 @@ color: #FFFFFF;
     letter-spacing: 0.03em;
     color: var(--headline-color);
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -495,4 +539,24 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--title-color);
+}
+.portfolio-wrap-box{
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-cover-box{
+    position: absolute;
+    top: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color:var(--header-color);
+    padding: 63px 24px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-box:hover .portfolio-cover-box{
+    transform: translateY(0%);    
 }
