--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,9 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-box:hover .portfolio-cover-box{
+.portfolio-box:hover .portfolio-cover-box,
+.portfolio-box:focus .portfolio-cover-box
+{
     transform: translateY(0%);    
 }
 
@@ -594,6 +596,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     border-radius: 50%;
     background-color: var(--header-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 .is-hidden{
     opacity: 0;
